--- a/app/views/kites/show.html.erb
+++ b/app/views/kites/show.html.erb
@@ -1,5 +1,9 @@
 <h1>  <%= @kite.name  %>   </h1>
 
-<p>This kite is <% @kite.size%> tall and we have <%= @kite.quantity %> available for purchase. </p>
+<p>This kite is <%= @kite.size %> tall and we have <%= @kite.quantity %> available for purchase. </p>
 
 <%= link_to "Back to the list!", kites_path %>
+
+<%= link_to "Edit this kite! ",  edit_kite_path(@kite) %>
+
+<%= link_to "Delete this kite!", :kite, method: :delete, data: { confirm: "Are you sure you want to delete this kite? It's really cool looking!"} %>
